--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/LiamLyford/ECE-OQM-logging#readme",
   "dependencies": {
-    "aws-sdk": "^2.467.0"
+    "aws-sdk": "^2.467.0",
+    "express": "^4.17.1",
+    "mailparser": "^2.7.1"
   }
 }
